Update responsive design for landing, fix overflowing content bug for phone primary grid

--- a/src/front/pages/Landing/_index.scss
+++ b/src/front/pages/Landing/_index.scss
@@ -12,11 +12,7 @@
     grid-row: 1/4;
 
     .headline {
-      margin-bottom: size.$size-30;
-    }
-
-    .txt-lg {
-      margin-bottom: size.$size-45;
+      margin-bottom: size.$size-14;
     }
   }
 
@@ -33,12 +29,6 @@
   .featured-case-studies-header {
     @extend %featured-header;
     grid-row: 8/9;
-  }
-
-  .featured-posts-header {
-    @extend %featured-header;
-    grid-column: 2/4;
-    grid-row: 13/14;
   }
 
   .subgrid-featured {
@@ -153,12 +143,14 @@
 
     .featured-projects,
     .featured-case-studies {
-      grid-row: 5/6;
-
       .subgrid-featured-a,
       .subgrid-featured-b {
         display: block;
       }
+    }
+
+    .featured-projects {
+      grid-row: 5/6;
     }
 
     .featured-case-studies {
@@ -177,6 +169,36 @@
   }
 }
 
+@media (max-width: size.$size-550) {
+  .grid-landing {
+    grid-template-rows: repeat(5, size.$size-147) auto size.$size-147 auto;
+
+    .featured-projects-header {
+      grid-row: 5/6;
+    }
+
+    .featured-case-studies-header {
+      grid-row: 7/8;
+    }
+
+    .featured-projects {
+      grid-row: 6/7;
+    }
+
+    .featured-case-studies {
+      grid-row: 8/9;
+    }
+
+    .view-more-projects {
+      grid-row: 6/7;
+    }
+
+    .view-more-case-studies {
+      grid-row: 8/9;
+    }
+  }
+}
+
 @media (max-width: size.$size-470) {
   .grid-landing {
     grid-template-rows: repeat(4, size.$size-176) auto size.$size-176 auto;
@@ -185,8 +207,16 @@
 
     .cover {
       .headline {
-        margin-bottom: size.$size-20;
+        margin-bottom: size.$size-12;
       }
+    }
+
+    .featured-projects-header {
+      grid-row: 4/5;
+    }
+
+    .featured-case-studies-header {
+      grid-row: 6/7;
     }
 
     .subgrid-featured {
@@ -200,6 +230,22 @@
           margin-bottom: size.$size-24;
         }
       }
+    }
+
+    .featured-projects {
+      grid-row: 5/6;
+    }
+
+    .featured-case-studies {
+      grid-row: 7/8;
+    }
+
+    .view-more-projects {
+      grid-row: 5/6;
+    }
+
+    .view-more-case-studies {
+      grid-row: 7/8;
     }
   }
 }
