--- a/src/front/visuals/_grid.scss
+++ b/src/front/visuals/_grid.scss
@@ -13,6 +13,6 @@
 @media (max-width: size.$size-470) {
   .grid {
     grid-gap: size.$size-24;
-    grid-template-columns: 1fr;
+    grid-template-columns: minxmax(0, 1fr);
   }
 }
