--- a/src/front/visuals/_typography.scss
+++ b/src/front/visuals/_typography.scss
@@ -62,7 +62,6 @@ $bold: 700;
 @media (max-width: size.$size-960) {
   .headline {
     font-size: size.$size-63;
-    font-weight: bold;
   }
 }
 
